--- a/css/styles.css
+++ b/css/styles.css
@@ -882,6 +882,10 @@ img {
   min-height: 576px;
   width: 408px;
   padding: 72px 24px 24px 24px;
+  @media screen and (max-width: 428px) {
+    width: calc(100vw - 36px);
+    /* width: 380px; */
+  }
   background-color: #fcfcfc;
   border-radius: 4px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -926,6 +930,9 @@ img {
   display: flex;
   flex-direction: column;
   width: 360px;
+  @media screen and (max-width: 428px) {
+    width: calc(100vw - 84px);
+  }
   align-items: center;
 }
 .order-form-title {
