--- a/css/styles.css
+++ b/css/styles.css
@@ -62,26 +62,29 @@ img {
   }
   @media screen and (min-width: 1158px) {
     max-width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 .container {
   box-sizing: border-box;
   padding-left: 16px;
   padding-right: 16px;
-  /* margin-right: auto;
-  margin-left: auto; */
-  @media screen and (min-width: 428px) {
+
+  @media screen and (min-width: 428px) and (max-width: 767px) {
     width: 428px;
     margin-right: auto;
     margin-left: auto;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1157px) {
     width: 768px;
     margin-right: auto;
     margin-left: auto;
   }
   @media screen and (min-width: 1158px) {
     max-width: 1440px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 .main-nav {
@@ -108,12 +111,20 @@ img {
 
 .logo-nav {
   display: flex;
-  width: 100%;
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
   align-items: center;
   justify-content: space-between;
-  @media screen and (min-width: 768px) and (max-width: 1157px) {
+  @media screen and (min-width: 768px) {
     justify-content: left;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1157px) {
     gap: 120px;
+  }
+  @media screen and (min-width: 1158px) {
+    margin-left: 156px;
+    gap: 76px;
   }
 }
 .menunav {
@@ -163,6 +174,9 @@ img {
 .address {
   font-style: normal;
   margin-left: auto;
+  @media screen and (min-width: 1158px) {
+    margin-right: 156px;
+  }
 }
 .contacts {
   @media screen and (min-width: 1158px) {
@@ -530,6 +544,7 @@ img {
   }
   @media screen and (min-width: 1158px) {
     gap: 24px;
+    justify-content: center;
   }
 
   @media screen and (max-width: 767px) {
@@ -550,6 +565,14 @@ img {
   }
 }
 .features-icon {
+  display: flex;
+  max-width: 264px;
+  height: 112px;
+  background-color: var(--features-icon-bgcolor);
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+  border-radius: 4px;
   @media screen and (max-width: 1157px) {
     display: none;
   }
@@ -557,6 +580,9 @@ img {
 .features .item {
   @media screen and (min-width: 768px) and (max-width: 1157px) {
     flex-basis: calc((100% - 24px) / 2);
+  }
+  @media screen and (min-width: 1158px) {
+    width: 264px;
   }
 }
 .works .item {
@@ -570,8 +596,23 @@ img {
     display: none;
   }
 }
+
+.works {
+  @media screen and (min-width: 1158px) {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+  }
+}
+.works .item:last-child {
+  @media screen and (min-width: 1158px) {
+    display: flex;
+    margin-right: 0px;
+  }
+}
 /* Section-4-Team */
 .section-team {
+  max-width: 1440px;
   padding: 120px 0;
   background-color: var(--button-section-background-color);
   @media screen and (min-width: 428px) and (max-width: 767px) {
@@ -594,6 +635,11 @@ img {
     justify-content: center;
     row-gap: 64px;
     column-gap: 24px;
+  }
+  @media screen and (min-width: 1158px) {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
   }
 }
 .team-name-profession {
@@ -666,10 +712,17 @@ img {
   @media screen and (max-width: 767px) {
     column-gap: 16px;
   }
+  @media screen and (min-width: 1158px) {
+    gap: 24px;
+    justify-content: center;
+  }
 }
 .section-customers {
+  max-width: 1440px;
   padding-top: 120px;
   padding-bottom: 120px;
+  margin-right: auto;
+  margin-left: auto;
   @media screen and (max-width: 1157px) {
     padding-top: 96px;
     padding-bottom: 96px;
@@ -711,15 +764,18 @@ img {
 }
 /* Footer */
 .footer {
+  max-width: 1440px;
   background-color: var(--hero-footer-background-color);
   padding-top: 100px;
   padding-bottom: 100px;
-  @media screen and (min-width: 428px) {
+  margin-right: auto;
+  margin-left: auto;
+  @media screen and (min-width: 428px) and (max-width: 767px) {
     width: 428px;
     margin-right: auto;
     margin-left: auto;
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) and (max-width: 1157px) {
     width: 768px;
     padding-bottom: 96px;
     padding-top: 96px;
@@ -749,13 +805,16 @@ img {
   margin-left: auto;
 }
 .footer-list {
+  margin-right: 120px;
+  margin-left: 156px;
   @media screen and (max-width: 767px) {
     width: 100%;
     margin: 0 0 72px 0;
   }
-  margin-right: 120px;
+
   @media screen and (min-width: 768px) and (max-width: 1157px) {
     margin-right: 0px;
+    margin-left: 0px;
   }
 }
 
@@ -1167,10 +1226,11 @@ img {
 .filter {
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
+  justify-content: center;
   margin-bottom: 72px;
   @media screen and (max-width: 767px) {
     margin-bottom: 48px;
+    justify-content: left;
   }
   gap: 24px;
 }
@@ -1178,7 +1238,10 @@ img {
   margin-right: 0px;
 }
 .section-portfolio {
-  padding: 96px 0 120px;
+  padding: 100px 0 120px;
+  @media screen and (min-width: 768px) and (max-width: 1157px) {
+    padding: 64px 0 96px;
+  }
   @media screen and (max-width: 767px) {
     padding: 48px 0 48px;
   }
@@ -1222,6 +1285,11 @@ img {
   @media screen and (min-width: 768px) and (max-width: 1157px) {
     column-gap: 24px;
     row-gap: 72px;
+  }
+  @media screen and (min-width: 1158px) {
+    column-gap: 24px;
+    row-gap: 48px;
+    justify-content: center;
   }
 }
 .projects .item {
