--- a/css/styles.css
+++ b/css/styles.css
@@ -1001,6 +1001,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1018,6 +1019,7 @@ img {
   min-height: 576px;
   width: 408px;
   padding: 72px 24px 24px 24px;
+
   @media screen and (max-width: 428px) {
     width: calc(100vw - 36px);
     padding: 72px 16px 16px 16px;
@@ -1245,6 +1247,7 @@ img {
   @media screen and (max-width: 767px) {
     padding: 48px 0 48px;
   }
+  /* fill:var(--color1, #f4f4fd) */
 }
 .filter-button {
   font-family: inherit;
